# Schedariu

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  errors.rs  file_handler.rs  html_generator.rs  main.rs  markdown_parser.rs  utils.rs
