[package]
name = "schedariu"
version = "0.1.0"
authors = ["Ange Cesari"]
edition = "2021"

[dependencies]
pulldown-cmark = "0.8.0"
structopt = "0.3.23"
anyhow = "1.0.42"
scraper = "0.12.0"
thiserror = "1.0.26"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.5.4"
kuchiki = "0.8.1"
walkdir = "2.3.3"
uuid = { version = "1.4.0", features = ["v4"] }
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3"
